# huffman

./: BinomialHeap.hs  CompresorDeArchivos.hs  Huffman.hs  LICENSE  Main.hs  Makefile  huffman.cabal
app/: Main.hs
src/: BinomialHeap.hs  FileCompressor.hs  Huffman.hs
