name:                huffman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/germanleonz/huffman#readme
license:             BSD3
license-file:        LICENSE
author:              German Leon
maintainer:          germanleonz@gmail.com
copyright:           Copyright: (c) 2017 German Leon
category:            Miscellaneous
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable huffman-stack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , huffman
  default-language:    Haskell2010

test-suite huffman-stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , huffman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/germanleonz/huffman
